<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.AboutActivity">

    <TextView
        android:id="@+id/title_about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/archivo_black"
        android:text="@string/about_title"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/team_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/archivo_black"
        android:text="@string/team_name"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="@+id/title_about"
        app:layout_constraintStart_toStartOf="@+id/title_about"
        app:layout_constraintTop_toBottomOf="@+id/title_about" />

    <TextView
        android:id="@+id/uiux_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/archivo_black"
        android:text="@string/uiux"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/team_name" />

    <TextView
        android:id="@+id/md_team"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/md_team"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/uiux_title"
        app:layout_constraintTop_toBottomOf="@+id/uiux_title" />

    <TextView
        android:id="@+id/cloud_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/archivo_black"
        android:text="@string/cloud"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/uiux_title"
        app:layout_constraintTop_toBottomOf="@+id/md_team" />

    <TextView
        android:id="@+id/cc_team"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/cc_team"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/md_team"
        app:layout_constraintStart_toStartOf="@+id/cloud_title"
        app:layout_constraintTop_toBottomOf="@+id/cloud_title" />

    <TextView
        android:id="@+id/ml_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/archivo_black"
        android:text="@string/mach_learn"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/uiux_title"
        app:layout_constraintTop_toBottomOf="@+id/cc_team" />

    <TextView
        android:id="@+id/ml_team"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/ml_team"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/md_team"
        app:layout_constraintStart_toStartOf="@+id/ml_title"
        app:layout_constraintTop_toBottomOf="@+id/ml_title" />

</androidx.constraintlayout.widget.ConstraintLayout>