<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dashb"
                android:textSize="20sp"
                android:textColor="#595959"/>
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:elevation="16dp"
        app:cardElevation="3dp"
        app:cardCornerRadius="3dp"
        android:focusable="true"
        app:cardBackgroundColor="@color/yellow">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textColor="@color/black"
                    android:textSize="23sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_desc"
                    android:textColor="#5e5e5e"
                    android:textSize="18sp" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:contentDescription="@string/logo"
                    android:src="@drawable/logoblue" />
            </RelativeLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_kamus"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:elevation="12dp"
            app:cardCornerRadius="3dp"
            app:cardElevation="3dp"
            android:focusable="true"
            app:cardBackgroundColor="@color/softpink">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="3dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dictionary"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="130dp"
                    android:layout_height="90dp"
                    android:src="@drawable/gb_kamus"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:contentDescription="@string/logo" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_testskill"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:elevation="12dp"
            app:cardCornerRadius="3dp"
            app:cardElevation="3dp"
            android:focusable="true"
            app:cardBackgroundColor="@color/yellow">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="3dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/test"
                    android:textSize="18sp"
                    android:textColor="#5e5e5e"
                    android:textStyle="bold"/>

                <ImageView
                    android:layout_width="130dp"
                    android:layout_height="90dp"
                    android:src="@drawable/gb_testskill"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:contentDescription="@string/logo" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_about"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:elevation="12dp"
            app:cardCornerRadius="3dp"
            app:cardElevation="3dp"
            android:focusable="true"
            app:cardBackgroundColor="@color/yellow">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="3dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about_us"
                    android:textSize="18sp"
                    android:textColor="#5e5e5e"
                    android:textStyle="bold"/>

                <ImageView
                    android:layout_width="130dp"
                    android:layout_height="90dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginEnd="4dp"
                    android:layout_marginBottom="3dp"
                    android:src="@drawable/gb_about"
                    android:contentDescription="@string/logo" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_laporbug"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:elevation="12dp"
            app:cardCornerRadius="3dp"
            app:cardElevation="3dp"
            android:focusable="true"
            app:cardBackgroundColor="@color/softpink">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="3dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/report_bug"
                    android:textSize="18sp"
                    android:textColor="@color/white"
                    android:textStyle="bold"/>

                <ImageView
                    android:layout_width="130dp"
                    android:layout_height="90dp"
                    android:src="@drawable/gb_bugfix"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:contentDescription="@string/logo" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:textAlignment="center"
        android:text="@string/version"/>
</LinearLayout>